# slow-wasm-example

./: README.md  build.sh  test.html
formatter/: Cargo.toml
formatter/src/: lib.rs
native-app/: Cargo.toml
native-app/src/: main.rs
wasmer-app/: Cargo.toml
wasmer-app/src/: main.rs
wasmer2-app/: Cargo.toml
wasmer2-app/src/: main.rs
wasmer3-app/: Cargo.toml
wasmer3-app/src/: main.rs
wasmtime-app/: Cargo.toml
wasmtime-app/src/: main.rs
